Fix after review - tests and improvements